Corrected alignment

--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ a:hover >section{
     box-sizing: border-box;
     background-image: url(../images/data-centre.jpg);
     background-repeat: no-repeat;
-    background-position: 90% 30%; 
+    background-position: 80% 30%; 
     background-size: 90%;
 }
 
